# pytest

./: .env  .gitignore  README.md  config.py  pyproject.toml  pytest.ini  requirements.txt  settings.toml
.github/workflows/: tests.yaml
src/app/: app.py
src/flask_app/: __init__.py  __main__.py  config.py  routes.py  settings.toml
src/playwright_selenium_tox_example/: .env  .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
src/playwright_selenium_tox_example/src/preenchimento_automatico_formulario/playwright_execution/: run.py
src/playwright_selenium_tox_example/src/preenchimento_automatico_formulario/selenium_execution/: run.py
src/playwright_selenium_tox_example/src/preenchimento_automatico_formulario/selenium_execution/page/: contact_page.py
src/playwright_selenium_tox_example/src/preenchimento_automatico_formulario/selenium_execution/utils/: functions.py
src/playwright_selenium_tox_example/tests/playwright/: test_playwright.py
src/playwright_selenium_tox_example/tests/selenium/: conftest.py  test_selenium.py
src/pytest-django-restapi-example/: pytest.ini  requirements.txt
src/pytest-django-restapi-example/task_api/: urls.py  (+3 more)
srcs/flask_app/: __init__.py  run.py  settings.toml
tests/: conftest.py
tests/app/: test_app.py
tests/caplog/: test_node.py  test_pytest_caplog_basic.py  test_pytest_caplog_methods.py
tests/playwright/: test_example.py  test_with_generate_automatic_code.py
tests/pytest-bdd/: README.md
tests/pytest-selenium/: test_basic_selenium_plugin.py
tests/selenium/: conftest.py  test_basic_selenium.py  test_pom.py
(+93 files in other folders)
